@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-20T01:45:23Z",
-  "count_outdated" : 2607,
-  "uniques_outdated" : 701,
-  "count" : 2637,
-  "uniques" : 716,
+  "timestamp" : "2022-11-20T08:21:46Z",
+  "count_outdated" : 2611,
+  "uniques_outdated" : 702,
+  "count" : 2641,
+  "uniques" : 717,
   "clones" : [
-    {
-      "timestamp": "2022-11-06T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-09T00:00:00Z",
       "count": 2,
@@ -72,6 +65,13 @@
       "timestamp": "2022-11-19T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-20T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
