@@ -3,11 +3,6 @@
   "uniques": 9,
   "clones": [
     {
-      "timestamp": "2022-11-06T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-11-09T00:00:00Z",
       "count": 2,
       "uniques": 2
@@ -50,6 +45,11 @@
     {
       "timestamp": "2022-11-19T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-20T00:00:00Z",
+      "count": 4,
       "uniques": 1
     }
   ]
