@@ -1,3 +1,11 @@
+2022-11-20T08:21:46Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3507149392 # 1045
+* notice: last 14d: unq all: 9 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 701 2607 / 716 2637
+* notice: next accum: outdated-unq outdated-all / unq all: 702 2611 / 717 2641
+* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
+* notice: removed / changed dates: [2022-11-06] / [2022-11-20]
+
 2022-11-20T01:45:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3505999643 # 1044
 * notice: last 14d: unq all: 9 30
